# ipca

./: .gitignore  README.md  ipca.py  pyproject.toml
test/: test_gamma_kernel_bench.py  test_oos_check.py  test_profile.py  test_smoke.py  test_timing.py
